--- a/menu.html
+++ b/menu.html
@@ -29,6 +29,19 @@
 
     </div>
 
+    <wbr>
+
+    <hr>  
+
+    <div class="contenido">
+        <p>
+            El desarrollo de un software nuevo no es un proceso sencillo. Dependiendo del tamaño del programa, se<br />
+            deberá tener en cuenta una gran cantidad de posibles coyunturas, funciones y cuestiones problemáticas.<br />
+            Incluso los desarrolladores de software más expertos pueden llegar a desorientarse.<br />
+        </p>
+    </div>
+
+
    
 
 
